Addition of train data prediction accuracy

--- a/CODM_sentiment_analysis.ipynb
+++ b/CODM_sentiment_analysis.ipynb
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 38,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -45,7 +45,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -54,7 +54,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -121,7 +121,7 @@
        "4  An annoying experience all round. Ever since t...        1"
       ]
      },
-     "execution_count": 20,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -139,7 +139,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -164,7 +164,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -175,7 +175,7 @@
        "dtype: int64"
       ]
      },
-     "execution_count": 22,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -186,7 +186,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -262,7 +262,7 @@
        "max       5.000000"
       ]
      },
-     "execution_count": 23,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -273,7 +273,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -284,7 +284,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -357,7 +357,7 @@
        "4  An annoying experience all round. Ever since t...        1          0"
       ]
      },
-     "execution_count": 25,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -368,7 +368,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -380,7 +380,7 @@
        "Name: satisfied, dtype: int64"
       ]
      },
-     "execution_count": 26,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -395,7 +395,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -426,7 +426,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -442,7 +442,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -492,7 +492,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -565,7 +565,7 @@
        "4  an annoying experience all round ever since th...        1          0"
       ]
      },
-     "execution_count": 30,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -576,7 +576,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -591,7 +591,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
@@ -677,7 +677,7 @@
        "4  annoy experi round ever sinc updat season wild...  "
       ]
      },
-     "execution_count": 32,
+     "execution_count": 17,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -688,7 +688,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
@@ -755,7 +755,7 @@
        "4  annoy experi round ever sinc updat season wild...          0"
       ]
      },
-     "execution_count": 33,
+     "execution_count": 18,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -769,7 +769,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -810,7 +810,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
@@ -856,7 +856,7 @@
        "unsatisfied  annoy experi round ever sinc updat season wild..."
       ]
      },
-     "execution_count": 35,
+     "execution_count": 20,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -870,7 +870,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -885,7 +885,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [
     {
@@ -989,7 +989,7 @@
        "9     mobil       pleas"
       ]
      },
-     "execution_count": 37,
+     "execution_count": 22,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1020,7 +1020,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [
     {
@@ -1046,7 +1046,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [
     {
@@ -1113,7 +1113,7 @@
        "4  round ever wild dog unabl without crack cd int...          0"
       ]
      },
-     "execution_count": 39,
+     "execution_count": 24,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1128,7 +1128,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1156,7 +1156,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [
     {
@@ -1217,7 +1217,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 36,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1237,7 +1237,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 37,
    "metadata": {},
    "outputs": [
     {
@@ -1256,19 +1256,31 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 45,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Accuracy of SVC model is 70.40%\n",
-      "Accuracy of Logistic Regression model is 69.76%\n",
-      "Accuracy of Decision Trees model is 67.05%\n",
-      "Accuracy of Random Forest model is 73.62%\n",
-      "Accuracy of KNN model is 74.77%\n",
-      "Accuracy of XGBClassifier model is 71.30%\n"
+      "Accuracy of SVC model on test data is 74.77%\n",
+      "Accuracy of SVC model on train data is 89.37% \n",
+      "\n",
+      "Accuracy of Logistic Regression model on test data is 69.76%\n",
+      "Accuracy of Logistic Regression model on train data is 74.07% \n",
+      "\n",
+      "Accuracy of Decision Trees model on test data is 71.30%\n",
+      "Accuracy of Decision Trees model on train data is 86.83% \n",
+      "\n",
+      "Accuracy of Random Forest model on test data is 66.54%\n",
+      "Accuracy of Random Forest model on train data is 99.97% \n",
+      "\n",
+      "Accuracy of KNN model on test data is 70.40%\n",
+      "Accuracy of KNN model on train data is 99.84% \n",
+      "\n",
+      "Accuracy of XGBClassifier model on test data is 73.10%\n",
+      "Accuracy of XGBClassifier model on train data is 99.97% \n",
+      "\n"
      ]
     }
    ],
@@ -1290,8 +1302,10 @@
     "# Training each model and printing accuracy stores\n",
     "for name, model in models:\n",
     "    model_ = model.fit(x_train, y_train)\n",
-    "    prediction = model_.predict(x_test)\n",
-    "    print(f\"Accuracy of {name} model is {'{0:.2f}'.format(accuracy_score(prediction, y_test)*100)}%\")"
+    "    prediction_test = model_.predict(x_test)\n",
+    "    prediction_train = model.predict(x_train)\n",
+    "    print(f\"Accuracy of {name} model on test data is {'{0:.2f}'.format(accuracy_score(prediction_test, y_test)*100)}%\")\n",
+    "    print(f\"Accuracy of {name} model on train data is {'{0:.2f}'.format(accuracy_score(prediction_train, y_train)*100)}% \\n\")"
    ]
   },
   {
@@ -1303,7 +1317,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 97,
+   "execution_count": 42,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1331,7 +1345,8 @@
     "    'C' : [0.5, 1, 1.5],\n",
     "    'kernel' : ['linear', 'poly', 'rbf', 'sigmoid'],\n",
     "    'degree' : [1, 3, 4],\n",
-    "    'probability' : [True, False]\n",
+    "    'probability' : [True, False],\n",
+    "    'gamma' : [1, 'scale']\n",
     "}\n",
     "\n",
     "param_dist_xgb = {\n",
@@ -1353,7 +1368,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 96,
+   "execution_count": 43,
    "metadata": {},
    "outputs": [
     {
@@ -1361,7 +1376,7 @@
      "output_type": "stream",
      "text": [
       "The best estimators for KNeighborsClassifier() are :\n",
-      "KNeighborsClassifier(n_neighbors=7, weights='distance') \n",
+      "KNeighborsClassifier(n_neighbors=11, weights='distance') \n",
       "\n",
       "The best estimators for RandomForestClassifier() are :\n",
       "RandomForestClassifier(min_samples_split=4, n_estimators=200) \n",
@@ -1370,7 +1385,7 @@
       "LogisticRegression(C=2) \n",
       "\n",
       "The best estimators for SVC() are :\n",
-      "SVC(C=1.5, degree=4, kernel='sigmoid') \n",
+      "SVC(C=1.5, degree=1, kernel='poly') \n",
       "\n",
       "The best estimators for XGBClassifier(base_score=None, booster=None, colsample_bylevel=None,\n",
       "              colsample_bynode=None, colsample_bytree=None,\n",
@@ -1383,10 +1398,10 @@
       "              reg_lambda=None, scale_pos_weight=None, subsample=None,\n",
       "              tree_method=None, validate_parameters=None, verbosity=None) are :\n",
       "XGBClassifier(base_score=0.5, booster='gbtree', colsample_bylevel=1,\n",
-      "              colsample_bynode=1, colsample_bytree=0.4,\n",
-      "              enable_categorical=False, eval_metric='logloss', gamma=1,\n",
+      "              colsample_bynode=1, colsample_bytree=0.3,\n",
+      "              enable_categorical=False, eval_metric='logloss', gamma=2,\n",
       "              gpu_id=-1, importance_type=None, interaction_constraints='',\n",
-      "              learning_rate=0.1, max_delta_step=0, max_depth=6,\n",
+      "              learning_rate=0.2, max_delta_step=0, max_depth=5,\n",
       "              min_child_weight=1, missing=nan, monotone_constraints='()',\n",
       "              n_estimators=150, n_jobs=8, num_parallel_tree=1, predictor='auto',\n",
       "              random_state=0, reg_alpha=0, reg_lambda=1, scale_pos_weight=1,\n",
@@ -1407,18 +1422,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 98,
+   "execution_count": 44,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Accuracy of SVC model is 74.90%\n",
-      "Accuracy of Logistic Regression model is 73.49%\n",
-      "Accuracy of KNN model is 73.36%\n",
-      "Accuracy of Random Forest model is 72.59%\n",
-      "Accuracy of XGBClassifier model is 68.34%\n"
+      "Accuracy of SVC model on test data is 73.49%\n",
+      "Accuracy of SVC model on train data is 96.33% \n",
+      "\n",
+      "Accuracy of Logistic Regression model on test data is 73.75%\n",
+      "Accuracy of Logistic Regression model on train data is 99.97% \n",
+      "\n",
+      "Accuracy of KNN model on test data is 70.27%\n",
+      "Accuracy of KNN model on train data is 99.97% \n",
+      "\n",
+      "Accuracy of Random Forest model on test data is 73.36%\n",
+      "Accuracy of Random Forest model on train data is 82.67% \n",
+      "\n",
+      "Accuracy of XGBClassifier model on test data is 74.90%\n",
+      "Accuracy of XGBClassifier model on train data is 98.68% \n",
+      "\n"
      ]
     }
    ],
@@ -1429,7 +1454,7 @@
     "classifiers = {\n",
     "    SVC(C=1, kernel='linear', probability=True),\n",
     "    LogisticRegression(C=2),\n",
-    "    KNeighborsClassifier(n_neighbors=7, weights='distance'),\n",
+    "    KNeighborsClassifier(n_neighbors=11, weights='distance'),\n",
     "    RandomForestClassifier(min_samples_split=4, n_estimators=200),\n",
     "    XGBClassifier(learning_rate=0.1, n_estimators=150, max_depth=6, subsample=1, colsample_bytree=0.4,\n",
     "    gamma=1, use_label_encoder=False, eval_metric='logloss')\n",
@@ -1440,8 +1465,10 @@
     "# Training each model and printing accuracy stores\n",
     "for name, model in models:\n",
     "    model_ = model.fit(x_train, y_train)\n",
-    "    prediction = model_.predict(x_test)\n",
-    "    print(f\"Accuracy of {name} model is {'{0:.2f}'.format(accuracy_score(prediction, y_test)*100)}%\")"
+    "    prediction_test = model_.predict(x_test)\n",
+    "    prediction_train = model.predict(x_train)\n",
+    "    print(f\"Accuracy of {name} model on test data is {'{0:.2f}'.format(accuracy_score(prediction_test, y_test)*100)}%\")\n",
+    "    print(f\"Accuracy of {name} model on train data is {'{0:.2f}'.format(accuracy_score(prediction_train, y_train)*100)}% \\n\")"
    ]
   }
  ],
