Addition of deductions and general note

--- a/CODM_sentiment_analysis.ipynb
+++ b/CODM_sentiment_analysis.ipynb
@@ -1470,6 +1470,26 @@
     "    print(f\"Accuracy of {name} model on test data is {'{0:.2f}'.format(accuracy_score(prediction_test, y_test)*100)}%\")\n",
     "    print(f\"Accuracy of {name} model on train data is {'{0:.2f}'.format(accuracy_score(prediction_train, y_train)*100)}% \\n\")"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Based on the accuracy results above, I've made the following deductions\n",
+    "- SVC Model began to over fit on the training data thereby reducing its generalization ability : Not good to use\n",
+    "- There is an increase in perfomance for the Logistic regression model (More Generalization power) : Good to use\n",
+    "- The is a reduction in overfitting and increment of generalization ability of the Random Forests model : Good to use\n",
+    "- There is a slight increase in generalization and decrease in overfittig of the xgb classifier Model : Good to use\n",
+    "---\n",
+    "- General note: With the cap in prediction ability of each models at an average of 73.1%, In order to improve model accuracy, there will be need to collect more data."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
